--- a/app/CMakeLists.txt
+++ b/app/CMakeLists.txt
@@ -4,7 +4,7 @@ add_executable(${EXECUTABLE_NAME} ${APP_SOURCES})
 
 target_link_libraries(
     ${EXECUTABLE_NAME}
-    PRIVATE ${LIBRARY_NAME})
+    PRIVATE sorting)
 #            nlohmann_json::nlohmann_json
 #            fmt::fmt
 #            spdlog::spdlog
