--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -12,12 +12,10 @@ set(CMAKE_CXX_EXTENSIONS OFF)
 set(CMAKE_EXPORT_COMPILE_COMMANDS ON)
 
 # Options
-option(USE_CPM "Whether to use CPM." ON)
-
 option(ENABLE_WARNINGS "Enable to add warnings to a target." ON)
 option(ENABLE_WARNINGS_AS_ERRORS "Enable to treat warnings as errors." OFF)
 
-#option(ENABLE_TESTING "Enable a Unit Testing build." ON)
+option(ENABLE_TESTING "Enable a Unit Testing build." ON)
 #option(ENABLE_COVERAGE "Enable a Code Coverage build." OFF)
 
 #option(ENABLE_CLANG_TIDY "Enable to add clang tidy." OFF)
@@ -37,7 +35,7 @@ set(MISC_LIBRARY_NAME "misc")
 set(SORTING_LIBRARY_NAME "sorting")
 set(SEARCHING_LIBRARY_NAME "searching")
 
-#set(UNIT_TEST_NAME "unit_tests")
+set(UNIT_TEST_NAME "unit_tests")
 set(EXECUTABLE_NAME "main")
 
 # CMAKE MODULES
@@ -69,20 +67,20 @@ if(ENABLE_LTO)
 endif()
 
 # EXTERNAL LIBRARIES
-
-if(USE_CPM)
-    message(STATUS "Using CPM")
-    include(CPM)
-    #cpmaddpackage("gh:fmtlib/fmt#9.1.0")
+include(CPM)
+if(ENABLE_TESTING)
+    cpmaddpackage("gh:google/googletest#v1.14.0")
+    # list(APPEND CMAKE_MODULE_PATH ${Catch2_SOURCE_DIR}/extras)
 endif()
 
 # SUB DIRECTORIES
-
-#add_subdirectory(configured)
 add_subdirectory(3rd)
 add_subdirectory(src)
 add_subdirectory(app)
-#add_subdirectory(tests)
+if(ENABLE_TESTING)
+    enable_testing()
+    add_subdirectory(tests)
+endif()
 
 # INSTALL TARGETS
 
