--- a/app/CMakeLists.txt
+++ b/app/CMakeLists.txt
@@ -4,7 +4,7 @@ add_executable(${EXECUTABLE_NAME} ${APP_SOURCES})
 
 target_link_libraries(
     ${EXECUTABLE_NAME}
-    PRIVATE misc sorting searching vector)
+    PRIVATE misc sorting searching transforming vector)
 
 if(${ENABLE_WARNINGS})
     target_set_warnings(
