--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -1,4 +1,5 @@
 add_subdirectory(misc)
 add_subdirectory(sorting)
 add_subdirectory(searching)
+add_subdirectory(transforming)
 add_subdirectory(vector)
