--- a/src/searching/CMakeLists.txt
+++ b/src/searching/CMakeLists.txt
@@ -25,7 +25,7 @@ endif()
 if(${ENABLE_LTO})
     target_enable_lto(
         TARGET
-        ${LIBRARY_NAME}
+        ${SEARCHING_LIBRARY_NAME}
         ENABLE
         ON)
 endif()
